--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
                 { name: "Mohamed El Sayed", location: "الإسكندرية، مصر", comment: "Thanks, I received my order in Alexandria. Very satisfied and great quality." },
                 { name: "Sara Ahmed", location: "القاهرة، مصر", comment: "Quick delivery and the product feels genuine. Thank you!" },
                 { name: "أحمد خالد", location: "الجيزة، مصر", comment: "تم استلام الطلب في الجيزة، الخدمة كانت سريعة والجودة ممتازة." },
-                { name: "أحمد خالد", location: "القاهرة، مصر", comment: "تم استلام الطلب في القاهرة، الخدمة كانت سريعة والجودة ممتازة." },
+                { name: "أحمد خالد", location: "القاهرة، مصر", comment:"خدمة العملاء ممتازة، وحلوا مشكلتي بسرعة." },
                 { name: "أحمد خالد", location: "طنطا، مصر", comment: "تم استلام الطلب في طنطا، الخدمة كانت سريعة والجودة ممتازة." },
                 { name: "Omar Fouad", location: "المنصورة، مصر", comment: "Delivery was slightly delayed but still very happy with the product." },
                 { name: "Nourhan Saeed", location: "أسوان، مصر", comment: "Satisfied with the product and the speed of delivery." },
