--- a/index.html
+++ b/index.html
@@ -1183,62 +1183,60 @@
         <script>
             // Customer comments data
             const allComments = [
-  { name: "محمد السيد", location: "صلالة، عمان", comment: "وصلني خلال أربعة أيام إلى السعودية. كان المنتج متينًا - مثاليًا، مُغلّف مرتين داخل كيس شاي. لا رائحة له. منتج قوي، ورائحة نقية جدًا." },
-  { name: "يوسف نبيل", location: "جدة، السعودية", comment: "جودة فائقة - نقية تمامًا. أفضل ما امتلكته منذ شهور. شحن سريع، بدون أي مشاكل جمركية." },
-  { name: "فاطمة يوسف", location: "مسقط، عمان", comment: "وصل الطلب متأخرًا بيوم واحد، يُرجى تحسين وقت التسليم. بشكل عام، استلمتُ الطرد بأمان، والجودة أفضل من أي وقت مضى. شكرًا لكم." },
-  { name: "عمر طارق", location: "الكويت، الكويت", comment: "هل يمكنني الحصول على أي خصم على طلب حزمة 1 كجم في المرة القادمة؟" },
-  { name: "مصطفى عادل", location: "الدمام، السعودية", comment: "أشعر وكأنني أطير في السحاب بعد تناول نصف جرام. شكرًا لكم على الجودة الأفضل والخدمة الأفضل." },
-  { name: "كريم حلمي", location: "الدوحة، قطر", comment: "Pure white, fluffy, burns clean. Best batch yet. Came in plain DVD case — genius." },
-  { name: "زياد بدر", location: "الإسكندرية، مصر", comment: "نظيف وقوي وأفضل بكثير مما أجده محليًا." },
-  { name: "عبدالله الشامسي", location: "أبو ظبي، الإمارات", comment: "هل يمكنني الحصول عليه نقدًا في المرة القادمة.. هذه المرة استخدمت حساب صديقي للدفع ولكنه الآن خارج البلاد.. يرجى تقديم أي طريقة للدفع نقدًا" },
-  { name: "فيصل الهاملي", location: "نزوى، عمان", comment: "حش لزج لذيذ، رائحة زكية. مغلف بالبلاستيك، ثم داخل كيس قهوة. جودة ٩/١٠." },
-  { name: "خالد المزروعي", location: "المنامة، البحرين", comment: "بلورات صافية، بدون طعم كيميائي مر. نشوة ونضارة، تدوم من ٤ إلى ٥ ساعات." },
-  { name: "ناصر الكتبي", location: "السويس، مصر", comment: "Big chunky shards, very clear. No chemical burn, smooth smoke. Will definitely re-up." },
-  { name: "ندى النجار", location: "الدوحة، قطر", comment: "كان البلوشي الذي وصلني حارًا 🔥. ناعمًا وناعمًا، رائحته زكية، ويحترق بسلاسة. لا مشكلة." },
-  { name: "راشد المزروعي", location: "حولي، الكويت", comment: "الشبو نقي كالثلج ❄️. كسرته بسهولة، ويعطي مفعوله من أول رشفة." },
-  { name: "سالم بن زايد", location: "العين، الإمارات", comment: "وصلني شاي اللولو في كيس شاي. إنه نظيف ويُبهج المزاج حقًا 🌹." },
-  { name: "خالد حسام", location: "الرياض، السعودية", comment: "الكابتشينو أنيق، وأشربه بقوة وثبات طوال الليل. شكرًا لك يا ذيب." },
-  { name: "حسن فريد", location: "الخرطوم، البحرين", comment: "الوردة 💐 التي وصلتني كانت كبيرة، نظيفة. جربتها في الصحراء، وكانت أمسية رائعة." },
-  { name: "محمود جمال", location: "الشارقة، الإمارات", comment: "ناعم ورائحته كالمسك." },
-  { name: "طارق إهاب", location: "صلالة، عمان", comment: "الشبو داخل علبة بهارات. لم يشمه أحد. إنه يحترم عمله." },
-  { name: "أحمد زيدان", location: "طنطا، مصر", comment: "الثلج ❄️ صافٍ، يتلألأ كالبلور، ويمنحني طاقة هائلة." },
-  { name: "هاني توفيق", location: "المنصورة، مصر", comment: "كانت الفرصة سانحة. نصف جرعة استمرت معي طوال الليل." },
-  { name: "ياسر موسى", location: "تبوك، السعودية", comment: "أوصي به للجميع. منصة موثوقة." },
-  { name: "علاء حسن", location: "الرفاع، البحرين", comment: "جودة الهيلكس (الكبت) ثابتة؛ الطعم والقوة لا يتغيران." },
-  { name: "سامي فوزي", location: "الفجيرة، الإمارات", comment: "إنه شعور رائع 😄" },
-  { name: "كريم سيد", location: "الإسماعيلية، مصر", comment: "الشبو أذهلني منذ الدقيقة الأولى. عليك أن تكون حذرًا." },
-  { name: "إبراهيم النصر", location: "المحرق، البحرين", comment: "كل منتج عالي الجودة وواضح، يصل إلى الدماغ بسرعة ولا يحترق." },
-  { name: "نواف المطيري", location: "صور، عمان", comment: "حش لزج لذيذ، رائحة زكية. مغلف بالبلاستيك، ثم داخل كيس قهوة. جودة ٩/١٠." },
-  { name: "لطيفة منصور", location: "جدة، السعودية", comment: "بلورات صافية، بدون طعم كيميائي مر. نشوة ونضارة، تدوم من ٤ إلى ٥ ساعات." },
-  { name: "باسل عمر", location: "الفروانية، الكويت", comment: "Big chunky shards, very clear. No chemical burn, smooth smoke. Will definitely re-up." },
-  { name: "جاسم العبدالله", location: "أسوان، مصر", comment: "كان البلوشي الذي وصلني حارًا 🔥. ناعمًا وناعمًا، رائحته زكية، ويحترق بسلاسة. لا مشكلة." },
-  { name: "رامي الباز", location: "الدوحة، قطر", comment: "الشبو نقي كالثلج ❄️. كسرته بسهولة، ويعطي مفعوله من أول رشفة." },
-  { name: "فيصل المنصوري", location: "الخرطوم، البحرين", comment: "وصلني شاي اللولو في كيس شاي. إنه نظيف ويُبهج المزاج حقًا 🌹." },
-  { name: "سعيد بن سالم", location: "المدينة المنورة، السعودية", comment: "الكابتشينو أنيق، وأشربه بقوة وثبات طوال الليل. شكرًا لك يا ذيب." }
-  { name: "وليد أحمد", location: "المنامة، البحرين", comment: "What's the maximum order limit for this product?" },
-  { name: "هشام كمال", location: "رأس الخيمة، الإمارات", comment: "هذا أصلي ١٠٠٪. جربت كثير قبله." },
-  { name: "نورهان سعيد", location: "القاهرة، مصر", comment: "جيد جدًا، قلت لابن عمي يجربه فورًا." },
-  { name: "محمود الأشقر", location: "عجمان، الإمارات", comment: "Package was delayed 1 day but I don't mind. It's worth it." },
-  { name: "سيف السويدي", location: "الدمام، السعودية", comment: "Amazing quality. Please bring larger packs." },
-  { name: "ماجد الراشدي", location: "الإسكندرية، مصر", comment: "So clean, no weird smell, and effects last long." },
-  { name: "هدى الكعبي", location: "تبوك، السعودية", comment: "Thanks, I received my order in Alexandria. Very satisfied and great quality." },
-  { name: "سلطان الحارثي", location: "الخرطوم، البحرين", comment: "Quick delivery and the product feels genuine. Thank you!" },
-  { name: "فهد العتيبي", location: "الكويت، الكويت", comment: "تم استلام الطلب في الجيزة، الخدمة كانت سريعة والجودة ممتازة." },
-  { name: "عادل مصطفى", location: "الفجيرة، الإمارات", comment: "خدمة العملاء ممتازة، وحلوا مشكلتي بسرعة." },
-  { name: "نادر توفيق", location: "الدوحة، قطر", comment: "تم استلام الطلب في طنطا، الخدمة كانت سريعة والجودة ممتازة." },
-  { name: "سالم التميمي", location: "الشارقة، الإمارات", comment: "Delivery was slightly delayed but still very happy with the product." },
-  { name: "طلال الأنصاري", location: "مسقط، عمان", comment: "Satisfied with the product and the speed of delivery." },
-  { name: "خالد الشمالي", location: "صلالة، عمان", comment: "وصلتني الشحنة بسرعة والجودة ممتازة، شكراً لكم." },
-  { name: "سالم بو حمد", location: "نزوى، عمان", comment: "هل يمكنني الحصول على خصم عند الطلب القادم؟" },
-  { name: "عمر سعيد", location: "المنامة، البحرين", comment: "وصلت الطلبية لكن تأخرت يومين، أتمنى تحسين وقت التوصيل." },
-  { name: "فيصل البحراني", location: "صور، عمان", comment: "Amazing service, product quality is excellent!" },
-  { name: "لطيفة منصور", location: "المدينة المنورة، السعودية", comment: "تم استلام الطلب في العين، شكراً على الخدمة السريعة." },
-  { name: "جاسم العبدالله", location: "القاهرة، مصر", comment: "Thanks, received everything perfectly in Cairo." },
-  { name: "ناصر الرشيد", location: "الرياض، السعودية", comment: "توصيل سريع ومنتج قانوني وفعال. أنصح به بشدة." },
-  { name: "وليد خالد", location: "الدوحة، قطر", comment: "Is this product available" },
-  { name: "سعود بن علي", location: "عمان، عمان", comment: "Delivery was slightly delayed but still very happy with the product." }
-];
-           
+                { name: "محمد السيد", location: "الإسكندرية، مصر", comment: "جودة نقية، رائحة جميلة وطازجة. أنا مندهش." },
+                { name: "يوسف نبيل", location: "دبي، الإمارات العربية المتحدة", comment: "وصلت الطلبية متأخرة يومين، من فضلكم حسنوا وقت التوصيل." },
+                { name: "خالد حسام", location: "الرياض، المملكة العربية السعودية", comment: "واو، هذا ممتاز شكرًا. سأطلب مرة أخرى بالتأكيد." },
+                { name: "عمر طارق", location: "القاهرة، مصر", comment: "أفضل دواء استخدمته مؤخرًا. نظيف ومغلف جيدًا." },
+                { name: "حسن فريد", location: "الدوحة، قطر", comment: "التغليف رائع جدًا. شعرت بالتأثير خلال ساعة." },
+                { name: "محمود جمال", location: "مسقط، سلطنة عمان", comment: "أنا أشعر بشعور رائع بعد أخذ هذا. فعلاً مدهش." },
+                { name: "سامي فوزي", location: "الجيزة، مصر", comment: "هل يمكنني الحصول على خصم على طلب كيلو واحد؟" },
+                { name: "علي سمير", location: "الشارقة، الإمارات العربية المتحدة", comment: "نظيف وقوي وأفضل بكثير مما أجد محليًا." },
+                { name: "أحمد زيدان", location: "جدة، المملكة العربية السعودية", comment: "مثالي تمامًا. شكرًا على الخدمة السريعة والسرية." },
+                { name: "طارق خليفة", location: "المنامة، البحرين", comment: "رقم التتبع لم يعمل لمدة يومين. من فضلكم أصلحوه." },
+                { name: "وليد أحمد", location: "الإسكندرية، مصر", comment: "يبدو أصليًا وكان التأثير كما توقعت." },
+                { name: "نورهان عادل", location: "دبي، الإمارات العربية المتحدة", comment: "وصل في حالة جيدة. شكرًا على العناية." },
+                { name: "هاني توفيق", location: "المدينة المنورة، المملكة العربية السعودية", comment: "كل شيء من التغليف إلى الجودة ممتاز تمامًا." },
+                { name: "مصطفى عادل", location: "القاهرة، مصر", comment: "جودة عالية فعلاً. أفضل مما كنت أتوقع." },
+                { name: "عبدالله سالم", location: "الدوحة، قطر", comment: "الملصق والإغلاق كانا احترافيين جدًا." },
+                { name: "علاء حسن", location: "مسقط، سلطنة عمان", comment: "أحببت النتيجة. أخذت 2 جرام ونمت كطفل." },
+                { name: "كريم حلمي", location: "أبو ظبي، الإمارات العربية المتحدة", comment: "وصل خلال 3 أيام فقط. نقي وسلس. أنصح به بشدة." },
+                { name: "هشام كمال", location: "السويس، مصر", comment: "هل عندكم ورق؟ ما شفته بالصندوق." },
+                { name: "تامر أنور", location: "العين، الإمارات العربية المتحدة", comment: "الصندوق الخارجي كان تالف، لكن المنتج كان سليم." },
+                { name: "آية سامح", location: "الدمام، المملكة العربية السعودية", comment: "صراحة تفاجأت. أول مرة أطلب وأنا سعيدة جدًا." },
+                { name: "Mohab Fekry", location: "الإسماعيلية، مصر", comment: "This is the best I ever got. Way cheaper than street price." },
+                { name: "Fady Hatem", location: "دبي، الإمارات العربية المتحدة", comment: "Thanks guys, everything came perfectly wrapped." },
+                { name: "Ramy Elbaz", location: "المدينة المنورة، المملكة العربية السعودية", comment: "My second order, and again no complaints." },
+                { name: "Seif Lotfy", location: "الدوحة، قطر", comment: "Really clean and effective. Better than what I tried before." },
+                { name: "Ahmed Yehia", location: "مسقط، سلطنة عمان", comment: "Best from local market and very cheap." },
+                { name: "باسل عمر", location: "الجيزة، مصر", comment: "رائع ببساطة. لا تعليق إضافي." },
+                { name: "حبيبة نادر", location: "أبو ظبي، الإمارات العربية المتحدة", comment: "شحن سريع وتأثير قوي وخدمة احترافية." },
+                { name: "شريف صالح", location: "جدة، المملكة العربية السعودية", comment: "هل يمكنني الدفع نقدًا المرة القادمة أو فقط بطاقة؟" },
+                { name: "كريم سيد", location: "الإسكندرية، مصر", comment: "جودة عالية حقًا والرائحة كانت جميلة أيضًا." },
+                { name: "منى حجازي", location: "دبي، الإمارات العربية المتحدة", comment: "وصلت في صندوق بسيط، مناسب للخصوصية." },
+                { name: "Amr Galal", location: "مكة، المملكة العربية السعودية", comment: "Love it. Please keep this item always in stock." },
+                { name: "Yasser Mousa", location: "الدوحة، قطر", comment: "Wow. I'm speechless. You guys really nailed it." },
+                { name: "Omar Said", location: "مسقط، سلطنة عمان", comment: "What's the maximum order limit for this product?" },
+                { name: "زياد بدر", location: "القاهرة، مصر", comment: "هذا أصلي ١٠٠٪. جربت كثير قبله." },
+                { name: "عادل مصطفى", location: "العين، الإمارات العربية المتحدة", comment: "جيد جدًا، قلت لابن عمي يجربه فورًا." },
+                { name: "Nader Tawadros", location: "الرياض، المملكة العربية السعودية", comment: "Package was delayed 1 day but I don't mind. It's worth it." },
+                { name: "Tariq Ehab", location: "الإسكندرية، مصر", comment: "Amazing quality. Please bring larger packs." },
+                { name: "Ibrahim Nasr", location: "دبي، الإمارات العربية المتحدة", comment: "So clean, no weird smell, and effects last long." },
+                { name: "Mohamed El Sayed", location: "الإسكندرية، مصر", comment: "Thanks, I received my order in Alexandria. Very satisfied and great quality." },
+                { name: "Sara Ahmed", location: "القاهرة، مصر", comment: "Quick delivery and the product feels genuine. Thank you!" },
+                { name: "أحمد خالد", location: "الجيزة، مصر", comment: "تم استلام الطلب في الجيزة، الخدمة كانت سريعة والجودة ممتازة." },
+                { name: "أحمد خالد", location: "القاهرة، مصر", comment: "تم استلام الطلب في القاهرة، الخدمة كانت سريعة والجودة ممتازة." },
+                { name: "أحمد خالد", location: "طنطا، مصر", comment: "تم استلام الطلب في طنطا، الخدمة كانت سريعة والجودة ممتازة." },
+                { name: "Omar Fouad", location: "المنصورة، مصر", comment: "Delivery was slightly delayed but still very happy with the product." },
+                { name: "Nourhan Saeed", location: "أسوان، مصر", comment: "Satisfied with the product and the speed of delivery." },
+                { name: "أحمد علي", location: "جدة، السعودية", comment: "وصلتني الشحنة بسرعة والجودة ممتازة، شكراً لكم." },
+                { name: "منى سالم", location: "الرياض، السعودية", comment: "هل يمكنني الحصول على خصم عند الطلب القادم؟" },
+                { name: "خالد صالح", location: "الدمام، السعودية", comment: "وصلت الطلبية لكن تأخرت يومين، أتمنى تحسين وقت التوصيل." },
+                { name: "Latifa Mansour", location: "الدوحة، قطر", comment: "Amazing service, product quality is excellent!" },
+                { name: "أحمد سالم", location: "العين، الإمارات", comment: "تم استلام الطلب في العين، شكراً على الخدمة السريعة." },
+                { name: "Fatima Youssef", location: "القاهرة، مصر", comment: "Thanks, received everything perfectly in Cairo." },
+                { name: "عبدالله ناصر", location: "مسقط، عمان", comment: "توصيل سريع ومنتج قانوني وفعال. أنصح به بشدة." },
+                { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }
+            ];
 
             // Pagination variables
             const commentsPerPage = 8;
