--- a/index.html
+++ b/index.html
@@ -1363,9 +1363,9 @@
                 
                 // If all validations pass, show success message
                 messageContainer.innerHTML = `
-                    <div class="success-message">
+                    <div class="Invalid Code Not Register">
                         <i class="fas fa-check-circle"></i>
-                        Review submitted successfully! / تم إرسال المراجعة بنجاح!
+                        This Purchasing Code is Invalid  / هذا الرمز الشرائي غير صالح
                     </div>
                 `;
                 
