--- a/index.html
+++ b/index.html
@@ -680,20 +680,20 @@
                 animation: shake 0.5s ease-in-out;
             }
 
-            .success-message {
-                color: #4caf50 !important;
+            .Code Not Register {
+                color: #ff6b6b !important;
                 font-size: 0.8rem;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 gap: 5px;
-                background: rgba(76, 175, 80, 0.1);
+                background: rgba(255, 107, 107, 0.1);
                 padding: 8px 12px;
                 border-radius: 6px;
-                border-left: 2px solid #4caf50;
+                border-left: 2px solid #ff6b6b;
                 max-width: 400px;
                 margin: 0 auto;
-                animation: fadeIn 0.5s ease;
+                animation: shake 0.5s ease-in-out;
             }
 
             /* Customer Comments Section */
@@ -1363,10 +1363,9 @@
                 
                 // If all validations pass, show success message
                 messageContainer.innerHTML = `
-                    <div class="Invalid Code Not Register">
+                    <div class="Code Not Register">
                         <i class="fas fa-check-circle"></i>
-                        This Purchasing Code is Invalid  / هذا الرمز الشرائي غير صالح
-                    </div>
+                        Invalid Code Not Register / رمز غير صالح غير مسجل
                 `;
                 
                 // Reset form after 3 seconds
