--- a/index.html
+++ b/index.html
@@ -1236,6 +1236,8 @@
                 { name: "Fatima Youssef", location: "القاهرة، مصر", comment: "Thanks, received everything perfectly in Cairo." },
                 { name: "عبدالله ناصر", location: "مسقط، عمان", comment: "توصيل سريع ومنتج قانوني وفعال. أنصح به بشدة." },
                 { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }
+                { name: "عبدالله ناصر", location: "مسقط، عمان", comment: "توصيل سريع ومنتج قانوني وفعال. أنصح به بشدة." },
+                { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }
             ];
 
             // Pagination variables
