--- a/index.html
+++ b/index.html
@@ -1235,13 +1235,13 @@
                 { name: "أحمد سالم", location: "العين، الإمارات", comment: "تم استلام الطلب في العين، شكراً على الخدمة السريعة." },
                 { name: "Fatima Youssef", location: "القاهرة، مصر", comment: "Thanks, received everything perfectly in Cairo." },
                 { name: "عبدالله ناصر", location: "مسقط، عمان", comment: "توصيل سريع ومنتج قانوني وفعال. أنصح به بشدة." },
-                { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }
+                { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }, 
                 { name: "عبدالله ناصر", location: "مسقط، عمان", comment: "توصيل سريع ومنتج قانوني وفعال. أنصح به بشدة." },
-                { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }
+                { name: "Salem Al Tamimi", location: "دبي، الإمارات", comment: "Is this product available for bulk order?" }, 
             ];
 
             // Pagination variables
-            const commentsPerPage = 8;
+            const commentsPerPage = 10;
             let currentPage = 1;
             const totalPages = Math.ceil(allComments.length / commentsPerPage);
 
